--- a/jinja/manage_view.j2
+++ b/jinja/manage_view.j2
@@ -67,14 +67,14 @@ cards:
         {% else %}
         {% set local_ip = endpoint.host %}
         {% endif %}
-{{ tap_actions.url_navigate_action("tap_action", "https://" + endpoint.name + ".authabitrail.duckdns.org:51443", 8)  }}
+{{ tap_actions.url_navigate_action("tap_action", "https://" + endpoint.name + ".authabitrail.duckdns.org", 8)  }}
 {% set browser_mod_popup_style = { "icon_size": "15px", "dialog_min_width": "200", "dialog_max_width": "350", "dialog_min_height": "200", "dialog_max_height": "300"  } %}
 {{ tap_actions.browser_popup_action("double_tap_action", endpoint.name.title(), "binary_sensor.authelia_links_popup", endpoint.name.title() + " Links", browser_mod_popup_style, 8)  }}
                 type: horizontal-stack
                 cards:
 {% set url_popup_style = { "icon_size": "15px" } %}
 {{ buttons.url_button_card("Local",    "mdi:home",  "http://" + local_ip + ":" + endpoint.internal_port, url_popup_style, 18)}}
-{{ buttons.url_button_card("Authelia", "mdi:web",   "https://" + endpoint.name + ".authabitrail.duckdns.org:51443", url_popup_style, 18)}}
+{{ buttons.url_button_card("Authelia", "mdi:web",   "https://" + endpoint.name + ".authabitrail.duckdns.org", url_popup_style, 18)}}
     {% endfor %}
     templates:
       - name: frigate_template
@@ -124,7 +124,7 @@ cards:
 {{ buttons.button_card("reboot", "pyscript.thingino_reboot", { "camera_name":  camera.name + "_camera"}, confirmation_text, reboot_popup_style, 24) }}
 {% set closebutton_popup_style = { "icon_size": "15px", "dialog_min_width": "200", "dialog_max_width": "350", "dialog_min_height": "200", "dialog_max_height": "300"  } %}
 {{ buttons.close_popup_button_card(false, closebutton_popup_style, 24) }}
-{{ tap_actions.url_navigate_action("tap_action", "https://webcam-" + camera.name.replace("_","") + ".authabitrail.duckdns.org:51443/mjpeg/1", 10)  }}
+{{ tap_actions.url_navigate_action("tap_action", "https://webcam-" + camera.name.replace("_","") + ".authabitrail.duckdns.org/mjpeg/1", 10)  }}
         {% endfor %}
     templates:
       - name: camera_state_template
