--- a/templates/jinja/editor.html
+++ b/templates/jinja/editor.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}JINJA Editor - CodeMirror{% endblock %}
+{% block title %}JINJA Editor{% endblock %}
 
 {% block extra_css %}
 <style>
