Fix registry modal loading issues

--- a/templates/modal_base.html
+++ b/templates/modal_base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% from "macros/modal.html" import modal_footer_ok_cancel_buttons %}
 {% from "macros/modal.html" import form_builder %}
+{% from "macros/ul_macros.html" import ul_block %}
 
 <html lang="en" data-bs-theme="dark">
 <head>
