--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,12 @@
                     </ul>
                 </li>
                 {{ nav_item("Registry", "registry.index") }}
+                <li class="nav-item dropdown">
+                    {{  dropdown_header("Setup") }}
+                    <ul class="dropdown-menu">
+                        {{ dropdown_item("Logging", "setup.logging") }}
+                    </ul>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
