--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                 <li class="nav-item dropdown">
                     {{  dropdown_header("Setup") }}
                     <ul class="dropdown-menu">
-                        {{ dropdown_item("Logging", "setup.logging") }}
+                        {{ dropdown_item("Logging", "setup.logging_config") }}
                     </ul>
                 </li>
             </ul>
